@@ -1,0 +1,11 @@
+CREATE TABLE contact_reasons (reason VARCHAR(70));
+
+INSERT INTO contact_reasons ("reason") VALUES ("Fever");
+INSERT INTO contact_reasons ("reason") VALUES ("Severe headache");
+INSERT INTO contact_reasons ("reason") VALUES ("Muscle pain");
+INSERT INTO contact_reasons ("reason") VALUES ("Weakness");
+INSERT INTO contact_reasons ("reason") VALUES ("Fatigue");
+INSERT INTO contact_reasons ("reason") VALUES ("Diarrhea");
+INSERT INTO contact_reasons ("reason") VALUES ("Vomiting");
+INSERT INTO contact_reasons ("reason") VALUES ("Abdominal (stomach) pain");
+INSERT INTO contact_reasons ("reason") VALUES ("Unexplained hemorrhage (bleeding or bruising)");
